--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,34 @@
 body {
     background-color: darkslategrey;
     color: white;
+    font-size: 12px;
   }
   
   h1 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
   }
   
-  @media only screen and (min-width: 500px) {
+  @media only screen and (min-width: 200px) {
+    body {
+    background-color: lavenderblush;
+    color: black;
+    }
+
+  @media only screen and (min-width: 400px) {
   body {
   background-color: coral;
   }
+
+  @media only screen and (min-width: 600px) {
+    body {
+    background-color: yellow;
+    color: black;
+    
+    }
   
   @media only screen and (min-width: 800px) {
   body {
   background-color: lightblue;
+  color: black;
+  font-size: 42px;
   }
