--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,18 @@ body {
   h1 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
   }
+
+  .content {
+      color: darkslategrey;
+  }
+
+  h2 {
+      text-align: center;
+  }
+
+  p {
+    text-align: center;
+}
   
   @media only screen and (min-width: 200px) {
     body {
@@ -14,21 +26,22 @@ body {
     color: black;
     }
 
-  @media only screen and (min-width: 400px) {
-  body {
-  background-color: coral;
-  }
+    @media only screen and (min-width: 400px) {
+        body {
+        background-color:lightseagreen;
+        color: black;
+        
+        }
 
-  @media only screen and (min-width: 600px) {
-    body {
-    background-color: yellow;
-    color: black;
-    
-    }
+    @media only screen and (min-width: 600px) {
+        body {
+        background-color: rgb(247, 174, 228);
+        color: black;
+        }
   
   @media only screen and (min-width: 800px) {
   body {
   background-color: lightblue;
   color: black;
-  font-size: 42px;
+font-size: 22px;
   }
